samples/_failures_safe/1761253395_1e1814_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6868752.c: In function ‘main’:
./samples/SAFE/__tmp_b6868752.c:156:28: error: missing terminating " character
  156 |                     printf("Error: Cannot add matrices - dimension
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b6868752.c:156:21: error: expected expression at end of input
  156 |                     printf("Error: Cannot add matrices - dimension
      |                     ^~~~~~
./samples/SAFE/__tmp_b6868752.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6868752.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6868752.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6868752.c:156:21: error: expected declaration or statement at end of input
